--- a/style.css
+++ b/style.css
@@ -24,3 +24,17 @@ body {
 h1{
     color: var(--cor-destaque);
 }
+
+button {
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: nome;
+    border-radius: 15px;
+    padding 15px;
+    transition: background-color 0.3s;
+}
+
+button:hover(
+    backgroud-color: var(--cor-destaque);
+    color: var(--cor-principal);
+}
